# dynamoquery

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  __version__.py  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  vulture_whitelist.py  vulture_whitelist.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  on_push.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: on_demand_create_release_draft.yml  on_pr_merge.yml  on_pr_open.yml  on_pull_merged.yml  on_pull_opened_or_edited.yml  on_push.yml  on_push_changelog.yml  on_push_check.yml  on_push_coverage.yml  on_push_docs.yml  on_push_test.yml  on_release.yml  on_release_merge.yml  on_release_publish.yml  on_release_published.yml  on_release_pull_merged.yml
docs/: MODULES.md  README.md  _config.yml
docs/dynamo_query/: base.md  base_dynamo_query.md  boto3_retrier.md  data_table.md  dynamo_autoscaler.md  dynamo_query.md  dynamo_query_main.md  dynamo_query_types.md  dynamo_record.md  dynamo_table.md  dynamo_table_index.md  dynamo_types.md  enums.md  expressions.md  index.md  json_tools.md  lazy_logger.md  module.md  sentinel.md  types.md  utils.md
docs/dynamo_query/dictclasses/: decorators.md  dictclass.md  dynamo_dictclass.md  index.md  loose_dictclass.md
dynamo_query/: __init__.py  base.py  base_dynamo_query.py  boto3_retrier.py  data_table.py  dynamo_autoscaler.py  dynamo_autoscaler.py_  dynamo_query.py  dynamo_query_main.py  dynamo_query_types.py  dynamo_record.py  dynamo_table.py  dynamo_table_attributes.py  dynamo_table_index.py  dynamo_table_manager.py  dynamo_types.py  enums.py  expressions.py  json_tools.py  lazy_logger.py  sentinel.py  types.py  utils.py
dynamo_query/dictclasses/: decorators.py  dictclass.py  dynamo_dictclass.py  loose_dictclass.py
examples/: data_table.py  data_table_example.py  dynamo_query.py  dynamo_query_example.py  dynamo_table.py  dynamo_table_example.py
scripts/: before_commit.sh  bump_version.sh  docs.sh  push_docs.sh  release.sh
tests/: test_boto3_retrier.py  test_data_table.py  test_dynamo_autoscaler.py  test_dynamo_query.py  test_dynamo_query_main.py  test_dynamo_record.py  test_dynamo_table.py  test_dynamo_table_index.py  test_expressions.py  test_json_tools.py  test_sentinel.py  test_utils.py
tests/dictclasses/: test_dynamo_dictclass.py  test_loose_dictclass.py
tests/integration/: test_dynamo_table.py
